feedback and tests